terraform/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.7.0.0/16"
  enable_dns_hostnames = true

  tags = {
    Name = "kubernetes"
  }
}

resource "aws_route53_zone" "private" {
  name   = "k8s.local"
  vpc_id = aws_vpc.main.id
}

data "aws_availability_zones" "az" {}

resource "aws_subnet" "public-subnet" {
  count             = 3
  vpc_id            = aws_vpc.main.id
  availability_zone = data.aws_availability_zones.az.names[count.index]
  cidr_block        = "10.7.${count.index}.0/24"

  tags = {
    Name = "kubernetes-public-${data.aws_availability_zones.az.names[count.index]}"
  }
}

resource "aws_subnet" "private-subnet" {
  count             = 3
  vpc_id            = aws_vpc.main.id
  availability_zone = data.aws_availability_zones.az.names[count.index]
  cidr_block        = "10.7.${count.index+3}.0/24"

  tags = {
    Name        = "kubernetes-private-${data.aws_availability_zones.az.names[count.index]}"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.main.id}"
}

resource "aws_route_table" "public-route-table" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.igw.id}"
  }
}

resource "aws_route_table_association" "public-subnet-table-association" {
  count          = 3
  subnet_id      = element(aws_subnet.public-subnet.*.id, count.index)
  route_table_id = aws_route_table.public-route-table.id
}

resource "aws_eip" "natgw" {
  vpc   = true
}

resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.natgw.id
  subnet_id     = element(aws_subnet.public-subnet.*.id, 1)
  depends_on    = ["aws_internet_gateway.igw"]
}

resource "aws_route_table" "private-rt-gw" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.natgw.id
  }
}

resource "aws_route_table_association" "private-subnet-table-association" {
  count          = 3
  subnet_id      = element(aws_subnet.private-subnet.*.id, count.index)
  route_table_id = aws_route_table.private-rt-gw.id
}

resource "aws_security_group" "ssh_inbound" {
  name        = "kuberbetes-ssh"
  description = "Allow incoming SSH connections"
  vpc_id      = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
